Merge branch 'master' of http://git.sftpl.com/Mobility/Brag-Android
# Conflicts:
#	app/src/main/java/com/pulse/brag/data/AppDataManager.java
#	app/src/main/java/com/pulse/brag/data/remote/ApiInterface.java
#	app/src/main/java/com/pulse/brag/data/remote/AppApiManager.java
#	app/src/main/java/com/pulse/brag/data/remote/IApiManager.java
#	app/src/main/java/com/pulse/brag/ui/main/MainActivity.java
#	app/src/main/res/values/strings.xml