@@ -62,7 +62,8 @@ public class AddProductDialogFragment extends CoreDialogFragment<DialogFragmentA
     ColorListAdapter mColorListAdapter;
     SizeListAdapter mSizeListAdapter;
 
-    DataProductList.Products mProduct;
+    DataProductList.Products mProductDetails;
+    DataProductList.Size mProduct;
 
     private ViewTreeObserver.OnGlobalLayoutListener keyboardLayoutListener = new ViewTreeObserver.OnGlobalLayoutListener() {
         @Override
@@ -125,7 +126,7 @@ public class AddProductDialogFragment extends CoreDialogFragment<DialogFragmentA
     public void beforeViewCreated() {
         getDialog().getWindow().setSoftInputMode(WindowManager.LayoutParams.SOFT_INPUT_ADJUST_RESIZE);
         if (getArguments() != null && getArguments().containsKey(Constants.BUNDLE_SELETED_PRODUCT)) {
-            mProduct = getArguments().getParcelable(Constants.BUNDLE_SELETED_PRODUCT);
+            mProductDetails = getArguments().getParcelable(Constants.BUNDLE_SELETED_PRODUCT);
         }
     }
 
@@ -143,12 +144,29 @@ public class AddProductDialogFragment extends CoreDialogFragment<DialogFragmentA
 
         attachKeyboardListeners();
 
-        if (mProduct != null) {
-            mAddProductDialogViewModel.updateMaxQty(String.valueOf(mProduct.getStockData()));
-            mAddProductDialogViewModel.updateProductName(mProduct.getDescription());
-            if (mProduct.getStockData() > 0)
-                mAddProductDialogViewModel.updateQty(String.valueOf(1));
-            showData();
+        if (mProductDetails != null) {
+
+            List<String> mIntegerList = new ArrayList<>();
+            mIntegerList.add("#000000");
+            mColorListAdapter = new ColorListAdapter(getActivity(), mIntegerList, 0, this);
+            mDialogFragmentAddProductBinding.recycleViewColor.setAdapter(mColorListAdapter);
+            mDialogFragmentAddProductBinding.recycleViewColor.addItemDecoration(new HorizontalSpacingDecoration(10));
+
+            List<DataProductList.Size> sizeList = new ArrayList<>();
+            int pos = 0;
+            int selectedPos = 0;
+            for (DataProductList.Size size : mProductDetails.getSizes()) {
+                if (size.isIsDefault()) {
+                    selectedPos = pos;
+                    mProduct = size;
+                }
+                pos++;
+                sizeList.add(size);
+            }
+            mSizeListAdapter = new SizeListAdapter(getActivity(), sizeList, selectedPos, this);
+            mDialogFragmentAddProductBinding.recycleViewSize.setAdapter(mSizeListAdapter);
+            mDialogFragmentAddProductBinding.recycleViewSize.addItemDecoration(new HorizontalSpacingDecoration(10));
+            showData(mProduct.getDescription(), mProduct.getStockData(), mProduct.getUnitPrice(), mProduct.getImages());
         }
     }
 
@@ -172,57 +190,34 @@ public class AddProductDialogFragment extends CoreDialogFragment<DialogFragmentA
         return R.layout.dialog_fragment_add_product;
     }
 
-    public void showData() {
-
-        mDialogFragmentAddProductBinding.edittextQty.setFilters(new InputFilter[]{new InputFilter.LengthFilter(String.valueOf(mProduct.getStockData()).length())});
-
-        List<String> mIntegerList = new ArrayList<>();
-        mIntegerList.add("#F44336");
-        mIntegerList.add("#E91E63");
-        mIntegerList.add("#9C27B0");
-        mIntegerList.add("#2196F3");
-        mIntegerList.add("#FF9800");
-        mIntegerList.add("#FF5722");
-        mIntegerList.add("#3F51B5");
-        mColorListAdapter = new ColorListAdapter(getActivity(), mIntegerList, 0, this);
-        mDialogFragmentAddProductBinding.recycleViewColor.setAdapter(mColorListAdapter);
-        mDialogFragmentAddProductBinding.recycleViewColor.addItemDecoration(new HorizontalSpacingDecoration(10));
-
-        List<DataProductList.Size> sizeList = new ArrayList<>();
-        int pos = 0;
-        int selectedPos = 0;
-        for (DataProductList.Size size : mProduct.getSizes()) {
-            if (size.isIsDefault()) {
-                selectedPos = pos;
-            }
-            pos++;
-            sizeList.add(size);
-        }
-        mSizeListAdapter = new SizeListAdapter(getActivity(), sizeList, selectedPos, this);
-        mDialogFragmentAddProductBinding.recycleViewSize.setAdapter(mSizeListAdapter);
-        mDialogFragmentAddProductBinding.recycleViewSize.addItemDecoration(new HorizontalSpacingDecoration(10));
-
+    public void showData(String description, int stockData, double unitPrice, List<String> bannerImages) {
         List<ImagePagerResponse> imagePagerResponeList = new ArrayList<>();
-        for (DataProductList.Size size : mProduct.getSizes()) {
-            if (size.getImages().size() > 0) {
-                imagePagerResponeList.add(new ImagePagerResponse(size.getImages().get(0), ""));
-            }
+        for (String url : bannerImages) {
+            imagePagerResponeList.add(new ImagePagerResponse(url, ""));
         }
-
         mDialogFragmentAddProductBinding.viewPager.setAdapter(new ImagePagerAdapter(getActivity(), imagePagerResponeList, this));
         mDialogFragmentAddProductBinding.pagerView.setViewPager(mDialogFragmentAddProductBinding.viewPager);
+
+        if (stockData > 0)
+            mAddProductDialogViewModel.updateQty(String.valueOf(1));
+
+
+        mAddProductDialogViewModel.updateMaxQty(String.valueOf(stockData));
+        mAddProductDialogViewModel.updateProductName(description);
+        mDialogFragmentAddProductBinding.edittextQty.setFilters(new InputFilter[]{new InputFilter.LengthFilter(String.valueOf(mProductDetails.getStockData()).length())});
     }
 
     @Override
     public void onSeleteColor(int pos) {
         mColorListAdapter.setSelectorItem(pos);
-        mAddProductDialogViewModel.updateNotifyMe(true);
     }
 
     @Override
     public void OnSelectedSize(int prevPos, int pos, DataProductList.Size item) {
         if (prevPos != pos) {
             mSizeListAdapter.setSelectedItem(pos);
+            mProduct = item;
+            showData(item.getDescription(), item.getStockData(), item.getUnitPrice(), item.getImages());
         }
     }
 
@@ -267,11 +262,11 @@ public class AddProductDialogFragment extends CoreDialogFragment<DialogFragmentA
     @Override
     public void afterTextChanged(Editable s) {
         if (s != null) {
-            if (s.toString().trim().length() == 0 || new Integer(s.toString()).intValue() == 0) {
+            if (s.toString().trim().length() == 0 || Integer.valueOf(s.toString()) == 0) {
                 mDialogFragmentAddProductBinding.textviewMax.setTextColor(getResources().getColor(R.color.text_black));
                 mDialogFragmentAddProductBinding.textviewAddCart.setTextColor(getResources().getColor(R.color.gray_transparent));
                 mDialogFragmentAddProductBinding.textviewAddCart.setEnabled(false);
-            } else if (new Integer(s.toString()).intValue() > mProduct.getStockData()) {
+            } else if (Integer.valueOf(s.toString()) > mProduct.getStockData()) {
                 mDialogFragmentAddProductBinding.textviewMax.setTextColor(Color.RED);
                 mDialogFragmentAddProductBinding.textviewAddCart.setTextColor(getResources().getColor(R.color.gray_transparent));
                 mDialogFragmentAddProductBinding.textviewAddCart.setEnabled(false);
